src/objects/NamespaceSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds the namespace prefix needed to normalize custom buttons URLs and javascript.</description>
    <fields>
        <fullName>BarPrefix__c</fullName>
        <description>String that would prefix a Salesforce Object to namespace it, eg &apos;esb__&apos; or null</description>
        <inlineHelpText>What prefix should I use to fully qualify a Salesforce Object, including the trailing underscore underscore?</inlineHelpText>
        <label>Bar Prefix</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DotPrefix__c</fullName>
        <description>String that would prefix an Apex Class to namespace it, eg &apos;esb.&apos; or null</description>
        <inlineHelpText>What prefix should I use to fully qualify an Apex Class, including the trailing dot?</inlineHelpText>
        <label>Dot Prefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>Raw namespace prefix, eg &apos;esb&apos; or null</description>
        <inlineHelpText>What is my namespace prefix?</inlineHelpText>
        <label>Prefix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Setting</label>
</CustomObject>